src/styles/_modal.scss
.overlay {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 100;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100vw;
  height: 100vh;
  overflow-y: auto;
  background: rgba(black, 0.5);
}

.modal {
  z-index: 100;
  display: flex;
  flex-direction: column;

  width: 100%;
  max-width: 550px;
  max-height: 100%;
  padding: 2rem 1.5rem;
  background: var(--color-white);
  box-shadow: 0 5px 30px -10px rgba(black, 0.2);

  scrollbar-width: none; /* Hide scrollbar styles Firefox */
  -webkit-overflow-scrolling: touch;

  &--wide {
    max-width: 750px;
  }

  &::-webkit-scrollbar {
    display: none;
  }

  &__header {
    display: flex;
    align-items: center;
    margin-bottom: 0.5rem;
    font-size: 1rem;
    line-height: 2.5rem;

    .btn {
      align-self: stretch;
      margin: 0;
      padding: 0 1rem;
    }

    .title-2 {
      flex: 1;
      margin: 0;
      text-transform: uppercase;
    }
  }

  &__footer {
    display: flex;
    justify-content: flex-end;
    margin-top: 1.5rem;
  }
}

